--- a/rf_v2.ipynb
+++ b/rf_v2.ipynb
@@ -1976,7 +1976,7 @@
       "source": [
         "import os\n",
         "\n",
-        "os.environ[\"FRED_API_KEY\"] = \"05ceea53cbc890aa3e4416729c89001b\""
+        "os.environ[\"FRED_API_KEY\"] = \"personal key"
       ],
       "metadata": {
         "id": "kChUnA642hSg"
