--- a/model_rf_v1 (1).ipynb
+++ b/model_rf_v1 (1).ipynb
@@ -2107,7 +2107,7 @@
         "\n",
         "# 랜덤포레스트 하이퍼파라미터 범위 지정\n",
         "param_dist = {\n",
-        "    'n_estimators': [100, 200, 300],\n",
+        "    'n_estimators': [50, 100, 200, 300],\n",
         "    'max_depth': [3, 5, 7, 10],\n",
         "    'min_samples_split': [2, 5, 10],\n",
         "    'min_samples_leaf': [1, 2, 4],\n",
@@ -2154,7 +2154,7 @@
           "name": "stdout",
           "text": [
             "Fitting 2 folds for each of 5 candidates, totalling 10 fits\n",
-            "✅ Best hyperparameters (from tuning): {'n_estimators': 200, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'max_depth': 10}\n"
+            "✅ Best hyperparameters (from tuning): {'n_estimators': 50, 'min_samples_split': 10, 'min_samples_leaf': 2, 'max_features': 'sqrt', 'max_depth': 10}\n"
           ]
         }
       ]
@@ -2195,9 +2195,6 @@
         "best_model_index = None\n",
         "best_threshold_overall = None\n",
         "best_params_overall = None\n",
-        "\n",
-        "# best_params는 미리 정의되어 있다고 가정\n",
-        "# 예: best_params = {...}\n",
         "\n",
         "for i in tqdm(range(100)):\n",
         "    # 매 반복마다 다른 seed 사용\n",
