--- a/model_rf_v2(tree100).ipynb
+++ b/model_rf_v2(tree100).ipynb
@@ -1848,7 +1848,7 @@
         "from fredapi import Fred\n",
         "\n",
         "# FRED API 연결\n",
-        "fred = Fred(api_key=\"05ceea53cbc890aa3e4416729c89001b\")  # 실제 API 키로 대체해야 함\n",
+        "fred = Fred(api_key=\"myapikey\")  # 실제 API 키로 대체해야 함\n",
         "\n",
         "# 미국 3년 만기 국채 수익률(GS3) 시계열 불러오기\n",
         "series = fred.get_series('GS3')  # pandas.Series 형식으로 반환됨\n",
@@ -2107,7 +2107,7 @@
         "\n",
         "# 랜덤포레스트 하이퍼파라미터 범위 지정\n",
         "param_dist = {\n",
-        "    'n_estimators': [100, 200, 300],\n",
+        "    'n_estimators': [50, 100, 200, 300],\n",
         "    'max_depth': [3, 5, 7, 10],\n",
         "    'min_samples_split': [2, 5, 10],\n",
         "    'min_samples_leaf': [1, 2, 4],\n",
