--- a/model_lgbm_v1.ipynb
+++ b/model_lgbm_v1.ipynb
@@ -2145,13 +2145,24 @@
       },
       "execution_count": 24,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Fitting 2 folds for each of 5 candidates, totalling 10 fits\n"
-          ]
-        },
+  {
+    "output_type": "stream",
+    "name": "stdout",
+    "text": [
+      "Fitting 2 folds for each of 5 candidates, totalling 10 fits\n",
+      "✅ Best hyperparameters (from tuning): {\n",
+      "    'subsample': 1.0,\n",
+      "    'num_leaves': 63,\n",
+      "    'n_estimators': 200,\n",
+      "    'min_child_samples': 10,\n",
+      "    'max_depth': 10,\n",
+      "    'learning_rate': 0.05,\n",
+      "    'colsample_bytree': 1.0\n",
+      "}\n"
+    ]
+  }
+]
+
         {
           "output_type": "error",
           "ename": "KeyboardInterrupt",
