--- a/model_rf_v2(tree100)_with_result.ipynb
+++ b/model_rf_v2(tree100)_with_result.ipynb
@@ -2107,7 +2107,7 @@
         "\n",
         "# 랜덤포레스트 하이퍼파라미터 범위 지정\n",
         "param_dist = {\n",
-        "    'n_estimators': [100, 200, 300],\n",
+        "    'n_estimators': [50, 100, 200, 300],\n",
         "    'max_depth': [3, 5, 7, 10],\n",
         "    'min_samples_split': [2, 5, 10],\n",
         "    'min_samples_leaf': [1, 2, 4],\n",
@@ -2154,7 +2154,7 @@
           "name": "stdout",
           "text": [
             "Fitting 2 folds for each of 5 candidates, totalling 10 fits\n",
-            "✅ Best hyperparameters (from tuning): {'n_estimators': 200, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'max_depth': 10}\n"
+            "✅ Best hyperparameters (from tuning): {'n_estimators': 50, 'min_samples_split': 5, 'min_samples_leaf': 2, 'max_features': 'sqrt', 'max_depth': 10}\n"
           ]
         }
       ]
